k8s-specification/ingress/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-ingress
  namespace: my-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-traget: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /nginx
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - pathType: Prefix    
        path: /
        backend:
          service:
            name: my-app-service
            port:
              number: 3000
